new Java standard HTTP Client